# pypi-assistant

./: .eslintrc.json  .vscodeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
examples/: pyproject.toml  requirements.txt
src/: extension.test.ts  extension.ts  output.ts  parsing.ts  pypi.ts  wretch-polyfills.ts
src/parsing/: index.ts  pip.test.ts  pip.ts  poetry.test.ts  poetry.ts  pyproject.test.ts  pyproject.ts  requirements.test.ts  requirements.ts  types.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts  index.ts
