[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "Test"
authors = ["Michael Matloka"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[dependency-groups]
group-a = ["foo"]
group-b = ["foo>1.0"]
group-c = ["foo<1.0"]
all = [
    "foo",
    {include-group = "group-a"},
    {include-group = "group-b"},
    {include-group = "group-c"},
]

[tool.uv]
constraint-dependencies = ["grpcio<1.65"]
dev-dependencies = ["ruff==0.5.0"]

[tool.pixi.pypi-dependencies]
requests = "^2.22.0"
